Fixed: navbar now does not overflow
added horizontal scrolling for navbar elements.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 html, body {
-    height: 100vh;
+    min-width: 100vw;
     min-height: 100vh;
     overflow: hidden;
+    
 }
 
 body {
@@ -11,13 +12,18 @@ body {
     background-size: 5px 5px;
     color: #4a473b;
     font-family: Helvetica, sans-serif;
-    font-weight: lighter;
-    margin: 0;  
+    font-weight: lighter;  
     height: 100vh;
     letter-spacing: .1rem; 
+    
+    /*
+    background: url(nierautomata-map.jpg) no-repeat center center fixed;
+    */
+    
+    background-size: cover;
 }
 
-.container::before{
+body::before{
     position: absolute;
     content: "";
     background-size: 5px 5px;
@@ -28,16 +34,67 @@ body {
 }
 
 .lace-pattern{
-    border-top: 2px solid #4a473b;
+    display:block;
+    height: 40px;
+    background: url(lace.svg) repeat-x left top / 70px 30px, linear-gradient(to right, #4a473b 10px, transparent 10px, transparent 40px) repeat-x left top / 70px 6px;
+    margin-left: 36px;
+    
 }
 
-.lace-pattern-inner{
-    
-    display:block;
-    height: 30px;
-    background: url(lace.svg) repeat-x left top / 70px 30px, linear-gradient(to right, #4a473b 10px, transparent 10px, transparent 40px) repeat-x left top / 70px 4px;
-    margin-left: 60px;
+
+.lace-pattern::before{
+    content: '';
+    position: absolute;
+    background-color: #4a473b;
+    width: 100%;
+    height: 2px;
+    left: 0;
+
 }
+
+main{
+    height: 100%;
+    width: 93%;
+    margin: 0 40px;
+}
+
+nav {
+    background-color: lightblue;
+    height: auto;
+    margin: 22px 40px 15px 55px;
+    white-space:nowrap;
+    overflow-x: scroll;
+    scrollbar-width: none;
+}
+
+nav a{    
+    box-sizing: border-box;
+    display: inline-block;
+    background-color: #b1ad99;
+    width: 175px;
+    height: 45px;
+    margin: 0 0 0 25px;
+    text-align: center;
+    padding-top: 10px;
+}
+
+main h1{
+    display: inline-block;
+    font-weight: normal;
+    letter-spacing: 0.3rem;
+    text-transform: uppercase;
+    text-shadow: 0.3rem 0.3rem #a29f91;
+    font-size:3rem;
+    margin: 0;
+
+    &span {
+        float:center
+    }
+}
+
+
+
+
 
 
 
